--- a/nurses.ipynb
+++ b/nurses.ipynb
@@ -173,7 +173,7 @@
     "    child2 = np.concatenate((parent2[:point], parent1[point:]), axis=0)\n",
     "    return child1, child2\n",
     "\n",
-    "# Ejecución del algoritmo genético\n",
+    "# Ejecución algoritmo\n",
     "def geneticAlgorithm(sizeIndividual, sizePopulation, generations, mutation_probability, crossover_probability):\n",
     "    population = generateFirstPopulation(sizePopulation, Nurses, Days, Shifts)\n",
     "    accumulatedP = roulette(population)\n",
@@ -183,7 +183,7 @@
     "    for i in range(generations):\n",
     "        newPopulation = []\n",
     "        cont = 0\n",
-    "        while True:\n",
+    "        while len(newPopulation) < sizePopulation:\n",
     "            # Selección de padres\n",
     "            ind1 = selection(population, accumulatedP)\n",
     "            ind2 = selection(population, accumulatedP)\n",
@@ -192,6 +192,15 @@
     "            crossProb = np.random.uniform()\n",
     "            if crossProb <= crossover_probability:\n",
     "                child1, child2 = crossover(ind1, ind2)\n",
+    "                \n",
+    "                # Mutación en los hijos del cruce\n",
+    "                mProb1 = np.random.uniform()\n",
+    "                mProb2 = np.random.uniform()\n",
+    "                if mProb1 <= mutation_probability:\n",
+    "                    child1 = mutate(child1)\n",
+    "                if mProb2 <= mutation_probability:\n",
+    "                    child2 = mutate(child2)\n",
+    "                    \n",
     "                if valid(child1):\n",
     "                    newPopulation.append(child1)\n",
     "                if valid(child2):\n",
@@ -200,21 +209,6 @@
     "                newPopulation.append(ind1)\n",
     "                newPopulation.append(ind2)\n",
     "\n",
-    "            # Mutación con probabilidad mutation_probability\n",
-    "            ind1 = selection(population, accumulatedP)\n",
-    "            mProb = np.random.uniform()\n",
-    "            if mProb <= mutation_probability:\n",
-    "                child = mutate(ind1)\n",
-    "                if valid(child):\n",
-    "                    newPopulation.append(child)\n",
-    "            else:\n",
-    "                newPopulation.append(ind1)\n",
-    "\n",
-    "            # Control del tamaño de la nueva población\n",
-    "            if len(newPopulation) >= sizePopulation:\n",
-    "                newPopulation = newPopulation[:sizePopulation]\n",
-    "                break\n",
-    "        \n",
     "        # Actualización de la población y de la ruleta para la próxima generación\n",
     "        accumulatedP = roulette(newPopulation)\n",
     "        ff = [fitnessFunc(i) for i in newPopulation]\n",
@@ -224,8 +218,6 @@
     "    # Ordenar los mejores individuos según su aptitud\n",
     "    sortedBest = sorted(bestIndividual, key=fitnessFunc, reverse=True)\n",
     "    return bestIndividual, sortedBest[0]\n",
-    "\n",
-    "\n",
     "\n"
    ]
   },
@@ -365,7 +357,7 @@
    ],
    "source": [
     "# Ejecución del algoritmo\n",
-    "bestList, bestInd = geneticAlgorithm(Nurses, Population_Size, Generations, Mutation_Probability, 0.9)\n",
+    "bestList, bestInd = geneticAlgorithm(Nurses, Population_Size, Generations, Mutation_Probability, 1)\n",
     "\n",
     "# Evaluación del mejor individuo\n",
     "bestInd"
