--- a/nurses.ipynb
+++ b/nurses.ipynb
@@ -15,7 +15,8 @@
     "Shifts = 3  # Turnos por día (mañana, tarde, noche)\n",
     "Population_Size = 80\n",
     "Generations = 10\n",
-    "Mutation_Probability = 0.01"
+    "Mutation_Probability = 0.01\n",
+    "Crossover_Probability = 1"
    ]
   },
   {
@@ -357,7 +358,8 @@
    ],
    "source": [
     "# Ejecución del algoritmo\n",
-    "bestList, bestInd = geneticAlgorithm(Nurses, Population_Size, Generations, Mutation_Probability, 1)\n",
+    "\n",
+    "bestList, bestInd = geneticAlgorithm(Nurses, Population_Size, Generations, Mutation_Probability, Crossover_Probability)\n",
     "\n",
     "# Evaluación del mejor individuo\n",
     "bestInd"
