--- a/nurses.ipynb
+++ b/nurses.ipynb
@@ -14,7 +14,7 @@
     "Days = 30  # Días en un mes\n",
     "Shifts = 3  # Turnos por día (mañana, tarde, noche)\n",
     "Population_Size = 80\n",
-    "Generations = 10\n",
+    "Generations = 10 # 10.000\n",
     "Mutation_Probability = 0.01\n",
     "Crossover_Probability = 1"
    ]
@@ -143,21 +143,45 @@
     "    return violations\n",
     "\n",
     "def fitnessFunc(chromosome):\n",
+    "    # Contar el número de violaciones de las reglas en este cromosoma\n",
     "    violations = count_violations(chromosome)\n",
+    "    \n",
+    "    # Calcular el valor de fitness\n",
+    "    # Se usa 1 / (1 + violations) por las siguientes razones:\n",
+    "    # 1. Asegura que el fitness siempre sea positivo (importante para la selección por ruleta)\n",
+    "    # 2. Un cromosoma con 0 violaciones tendrá el máximo fitness de 1\n",
+    "    # 3. A medida que aumentan las violaciones, el fitness se acerca a 0 pero nunca lo alcanza\n",
+    "    # 4. Esta fórmula crea una relación inversa entre violaciones y fitness\n",
     "    return 1 / (1 + violations)\n",
     "\n",
-    "# Operador de selección por ruleta\n",
     "def roulette(population):\n",
+    "    # Calcular el valor de fitness para cada individuo en la población\n",
     "    fitness_values = np.array([fitnessFunc(chrom) for chrom in population])\n",
+    "    \n",
+    "    # Normalizar los valores de fitness para obtener probabilidades\n",
+    "    # Cada probabilidad es el fitness del individuo dividido por la suma total de fitness\n",
     "    probability = fitness_values / sum(fitness_values)\n",
+    "    \n",
+    "    # Calcular la probabilidad acumulada\n",
+    "    # Esto crea una \"ruleta\" donde los individuos con mayor fitness ocupan secciones más grandes\n",
     "    accumProb = np.cumsum(probability)\n",
+    "    \n",
     "    return accumProb\n",
     "\n",
     "def selection(population, accumProb):\n",
+    "    # Generar un número aleatorio entre 0 y 1\n",
     "    nr = np.random.uniform()\n",
+    "    \n",
+    "    # Recorrer la lista de probabilidades acumuladas\n",
     "    for i, p in enumerate(accumProb):\n",
+    "        # Si el número aleatorio es menor que la probabilidad acumulada actual,\n",
+    "        # seleccionar el individuo correspondiente\n",
     "        if nr < p:\n",
     "            return population[i]\n",
+    "    \n",
+    "    # Si por alguna razón no se seleccionó ningún individuo (lo cual es muy improbable),\n",
+    "    # retornar el último individuo de la población\n",
+    "    return population[-1]\n",
     "\n",
     "# Operador de mutación\n",
     "def mutate(chromosome):\n",
@@ -179,7 +203,8 @@
     "    population = generateFirstPopulation(sizePopulation, Nurses, Days, Shifts)\n",
     "    accumulatedP = roulette(population)\n",
     "    ff = [fitnessFunc(i) for i in population]\n",
-    "    bestIndividual = [population[np.argmax(ff)]]  # Lista de los mejores individuos\n",
+    "    bestIndividual = [population[np.argmax(ff)]]\n",
+    "    \n",
     "\n",
     "    for i in range(generations):\n",
     "        newPopulation = []\n",
@@ -363,6 +388,16 @@
     "\n",
     "# Evaluación del mejor individuo\n",
     "bestInd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Imprimamos la cantidad de violaciones\n",
+    "count_violations(bestInd)"
    ]
   }
  ],
