--- a/nurses.ipynb
+++ b/nurses.ipynb
@@ -16,7 +16,8 @@
     "Population_Size = 80\n",
     "Generations = 10 # 10.000\n",
     "Mutation_Probability = 0.01\n",
-    "Crossover_Probability = 1"
+    "Crossover_Probability = 1\n",
+    "Elitism_Size = 40"
    ]
   },
   {
@@ -198,17 +199,22 @@
     "    child2 = np.concatenate((parent2[:point], parent1[point:]), axis=0)\n",
     "    return child1, child2\n",
     "\n",
-    "# Ejecución algoritmo\n",
-    "def geneticAlgorithm(sizeIndividual, sizePopulation, generations, mutation_probability, crossover_probability):\n",
+    "def geneticAlgorithm(sizeIndividual, sizePopulation, generations, mutation_probability, crossover_probability, elitism_size):\n",
+    "    # elitism_size define que cantidad de individuos elite vamos a pasar\n",
+    "    # El resto son cruce\n",
     "    population = generateFirstPopulation(sizePopulation, Nurses, Days, Shifts)\n",
     "    accumulatedP = roulette(population)\n",
     "    ff = [fitnessFunc(i) for i in population]\n",
     "    bestIndividual = [population[np.argmax(ff)]]\n",
-    "    \n",
     "\n",
     "    for i in range(generations):\n",
     "        newPopulation = []\n",
-    "        cont = 0\n",
+    "        \n",
+    "        # Elitismo: Transferir los mejores individuos directamente a la nueva población\n",
+    "        sorted_population = sorted(population, key=fitnessFunc, reverse=True)\n",
+    "        newPopulation.extend(sorted_population[:elitism_size])\n",
+    "        \n",
+    "        # Resto de la población por selección, cruce y mutación\n",
     "        while len(newPopulation) < sizePopulation:\n",
     "            # Selección de padres\n",
     "            ind1 = selection(population, accumulatedP)\n",
@@ -243,8 +249,7 @@
     "\n",
     "    # Ordenar los mejores individuos según su aptitud\n",
     "    sortedBest = sorted(bestIndividual, key=fitnessFunc, reverse=True)\n",
-    "    return bestIndividual, sortedBest[0]\n",
-    "\n"
+    "    return bestIndividual, sortedBest[0]\n"
    ]
   },
   {
@@ -384,7 +389,7 @@
    "source": [
     "# Ejecución del algoritmo\n",
     "\n",
-    "bestList, bestInd = geneticAlgorithm(Nurses, Population_Size, Generations, Mutation_Probability, Crossover_Probability)\n",
+    "bestList, bestInd = geneticAlgorithm(Nurses, Population_Size, Generations, Mutation_Probability, Crossover_Probability, Elitism_Size)\n",
     "\n",
     "# Evaluación del mejor individuo\n",
     "bestInd"
